# ganimator-eval-kernel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
src/: main.cpp
